Update Docker Compose configuration, enhance Vosk integration, and improve audio processing. Changed RTP port mapping, updated sample rates to 16000Hz, and added flow control for audio streaming. Removed deprecated Vosk engine implementation and adjusted dependencies in requirements.txt.

--- a/cfg/vosk.cfg
+++ b/cfg/vosk.cfg
@@ -7,8 +7,9 @@ ws_url = ws://172.17.0.3:2700
 
 # Sample rate of the audio (should match the model used by Vosk)
 # Telephony typically uses 8kHz
-sample_rate = 8000
+sample_rate = 16000
 
+max_queue_size = 100
 # VAD (Voice Activity Detection) settings
 use_vad = true
 
