--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ openai
 opensips>=0.1.3
 sipmessage
 requests
-websockets
-webrtcvad
-azure-cognitiveservices-speech
+websockets==14.0
+numpy==1.26.4
+scipy==1.13.0
+soundfile==0.12.1
