--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 deepgram-sdk
 aiortc
 openai
-opensips>=0.1.3
-sipmessage
-requests
-websockets==14.0
-numpy==1.26.4
-scipy==1.13.0
+opensips==0.1.5
+sipmessage==0.5.0
+requests==2.32.3
+websockets==15.0.1
+numpy==2.2.5
 soundfile==0.12.1
+scipy==1.15.2
+torch===2.7.0
+torchaudio==2.7.0
+silero-vad==5.1.2
+
