Update .gitignore to exclude .ini files, enhance docker-compose.yml by adding wyoming-piper service, and update requirements.txt to include wyoming package. Refactor run_local_stt_test.py for improved logging and audio processing, and modify speech_session_vosk.py to integrate TTS functionality with Wyoming Piper.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     depends_on:
       - opensips
       - vosk-server # opensips-ai-voice-connector başlamadan önce rtpproxy ve vosk'un hazır olmasını bekle
+      - wyoming-piper
     restart: unless-stopped # Konteyner durursa yeniden başlatmayı dene
 
   # OpenSIPS Servisi
@@ -57,6 +58,16 @@ services:
     ports:
       # Vosk WebSocket portunu host'a map'leyin
       - "2700:2700"
+    networks:
+      - opensips_network
+    restart: unless-stopped
+
+  wyoming-piper:
+    image: rhasspy/wyoming-piper
+    container_name: wyoming-piper
+    command: --voice tr_TR-fahrettin-medium
+    ports:
+      - "10200:10200"
     networks:
       - opensips_network
     restart: unless-stopped
