--- a/cfg/opensips-ai-voice-connector.ini
+++ b/cfg/opensips-ai-voice-connector.ini
@@ -22,8 +22,8 @@ ip = 192.168.1.122
 url = ws://vosk-server:2700
 channels = 1
 send_eof = true
-host = wyoming-piper
-port = 10200
+host = piper-tts-server
+port = 8000
 match = ^vosk.*$ 
 
 [deepgram]
