Update configuration and rename Vosk engine to SmartSpeech
This commit includes the following changes:
- Updated the IP address in `opensips-ai-voice-connector.ini` from `172.20.0.4` to `172.20.0.2`.
- Renamed the `[vosk]` section to `[SmartSpeech]` in the configuration file.
- Changed the configuration retrieval in `speech_session_vosk.py` to use the new "SmartSpeech" key.
- Updated the `FLAVORS` dictionary in `utils.py` to reflect the name change from "smart_speech" to "SmartSpeech".

These changes ensure consistency in naming and configuration for the SmartSpeech engine.

--- a/cfg/opensips-ai-voice-connector.ini
+++ b/cfg/opensips-ai-voice-connector.ini
@@ -1,6 +1,6 @@
 [opensips]
 # Use the Docker Compose service name instead of the Kubernetes DNS name
-ip = 172.20.0.4
+ip = 172.20.0.2
 port = 8088
 
 [engine]
@@ -18,7 +18,7 @@ ip = 192.168.1.122
 #RTP kaynak adresi
 
 
-[vosk]
+[SmartSpeech]
 url = ws://vosk-server:2700
 channels = 1
 send_eof = true
@@ -37,7 +37,7 @@ logfile = vosk_connector.log
 loglevel = INFO
 
 [ai]
-type = vosk
+type = SmartSpeech
 
 [azure]
 # Present in previous version and implied disabled at bottom of image
