Enhance configuration and error handling for SmartSpeech engine
This commit introduces several improvements to the SmartSpeech engine's configuration and error handling:

- Updated `opensips-ai-voice-connector.ini` to include Vosk STT and Piper TTS server settings, including a new `websocket_timeout` parameter and a specific TTS voice model.
- Enhanced the `ConfigSection` class in `config.py` with new methods `getfloat` and `getint` for better type handling of configuration values.
- Improved the `parse_params` function in `engine.py` to fallback to local configuration if no parameters are provided from the API or extra parameters.
- Updated the `_create_speech_session_manager` function in `utils.py` to ensure proper type handling for configuration values.
- Refined connection handling in `piper_tts_engine.py` and `vosk_stt_engine.py` to accommodate different websocket library versions, ensuring robust connection status checks.

These changes aim to improve the reliability and configurability of the SmartSpeech engine.

--- a/cfg/opensips-ai-voice-connector.ini
+++ b/cfg/opensips-ai-voice-connector.ini
@@ -19,11 +19,18 @@ ip = 192.168.1.122
 
 
 [SmartSpeech]
+# Vosk STT sunucu bağlantı ayarları
 url = ws://vosk-server:2700
+websocket_timeout = 5  # Vosk WebSocket bağlantı zaman aşımı (saniye)
 channels = 1
 send_eof = true
+
+# Piper TTS sunucu bağlantı ayarları
 host = piper-tts-server
 port = 8000
+TTS_VOICE = tr_TR-fahrettin-medium  # Piper TTS için kullanılacak ses modeli
+
+# SIP kullanıcılarının eşleşme deseni
 match = ^vosk.*$ 
 
 [deepgram]
