Update Docker configuration and enhance LLM integration
This commit includes the following changes:

- Updated the OpenSIPS Docker image version from 3.4 to 3.6 in `docker-compose.yml`.
- Added a new service for the LLM Turkish server in `docker-compose.yml`, enabling it to run alongside OpenSIPS.
- Enhanced the `local_test_config.ini` with LLM server configuration parameters, including URI, system prompt, max tokens, and temperature settings.
- Updated the `opensips-ai-voice-connector.ini` to include the LLM server URI and related parameters for better integration.
- Refactored the `SpeechSessionManager` class to incorporate LLM client functionality, allowing for dynamic response generation based on user input.

These changes aim to improve the overall architecture and functionality of the voice interaction system, enhancing user experience and response accuracy.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
   # OpenSIPS Servisi
   opensips:
     # Seçenek 1: Hazır OpenSIPS imajı kullanın (versiyonu ihtiyacınıza göre seçin)
-    image: opensips/opensips:3.4
+    image: opensips/opensips:3.6
     # Seçenek 2: Eğer OpenSIPS için kendi Dockerfile'ınız varsa:
     # build: ./path/to/opensips/docker/context # Gerçek yolu belirtin
     container_name: opensips
@@ -72,6 +72,14 @@ services:
       - opensips_network
     restart: unless-stopped
 
+  llm-turkish-server:
+    image: dehalokmansahin/llm-turkish-server:latest
+    container_name: llm-turkish-server
+    ports:
+      - "8765:8765"
+    networks:
+      - opensips_network
+    restart: unless-stopped
 networks:
   opensips_network:
     driver: bridge # Konteynerlerin birbirleriyle konuşabilmesi için ağ
