--- a/local_test_config.ini
+++ b/local_test_config.ini
@@ -16,6 +16,16 @@ test_wav_path = test.wav
 max_queue_size = 100
 # Add any other [vosk] settings from your main config if they are strictly needed by __init__
 
+[SpeechSessionManager]
+# LLM WebSocket Server Configuration
+llm_server_uri = ws://localhost:8765
+llm_system_prompt = Sen Garanti BBVA'nın sesli sanal asistanısın. Kullanıcıların sorularını profesyonel ve güven verici şekilde yanıtla.
+llm_max_tokens = 256
+llm_temperature = 0.7
+
+# Debug mode
+debug = true
+
 [general]
 # Optional, if Config class needs it
 loglevel = INFO
