--- a/cfg/opensips-ai-voice-connector.ini
+++ b/cfg/opensips-ai-voice-connector.ini
@@ -1,6 +1,6 @@
 [opensips]
 # Use the Docker Compose service name instead of the Kubernetes DNS name
-ip = 172.20.0.2
+ip = 172.20.0.5
 port = 8088
 
 [engine]
@@ -18,6 +18,7 @@ ip = 192.168.1.122
 #RTP kaynak adresi
 rtp_receive_buffer_size = 4096
 rtp_sender_stop_timeout = 1.0
+
 
 
 [SmartSpeech]
@@ -40,6 +41,12 @@ stt_target_sample_rate = 16000
 # stt_channels is already above
 # send_eof is already above
 debug = false # Example, might be overridden by general loglevel
+
+# LLM WebSocket Server Configuration
+llm_server_uri = ws://llm-turkish-server:8765
+
+llm_max_tokens = 256
+llm_temperature = 0.7
 
 bypass_vad = false
 vad_threshold = 0.25
