--- a/cfg/opensips-ai-voice-connector.ini
+++ b/cfg/opensips-ai-voice-connector.ini
@@ -49,12 +49,20 @@ llm_max_tokens = 256
 llm_temperature = 0.7
 
 bypass_vad = false
-vad_threshold = 0.25
+# VAD Settings - Gürültü için optimize edilmiş değerler
+vad_threshold = 0.3  # Başlangıç eşiği normalde makul değere ayarlandı
 vad_min_speech_ms = 150
 vad_min_silence_ms = 450
 vad_buffer_chunk_ms = 600
-speech_detection_threshold = 1
+speech_detection_threshold = 2  # Gürültüde yanlış tetiklenmeyi önlemek için
 silence_detection_threshold = 1
+
+# Adaptive VAD and Echo Cancellation Settings
+use_adaptive_vad = true
+auto_calibration = true
+webrtc_aggressiveness = 3  # Gürültü ortamı için daha agresif WebRTC VAD
+calibration_window_ms = 3000  # Daha hızlı kalibrasyon için 3 saniye
+
 
 speech_timeout_seconds = 10.0
 silence_timeout_seconds = 3.0
