--- a/local_test_config.ini
+++ b/local_test_config.ini
@@ -23,9 +23,23 @@ llm_system_prompt = Sen Garanti BBVA'nın sesli sanal asistanısın. Kullanıcı
 llm_max_tokens = 256
 llm_temperature = 0.7
 
+# VAD Settings - Gürültü için optimize edilmiş değerler
+vad_threshold = 0.3  # Başlangıç eşiği normalde makul değere ayarlandı
+vad_min_speech_ms = 150
+vad_min_silence_ms = 450
+vad_buffer_chunk_ms = 600
+speech_detection_threshold = 2  # Gürültüde yanlış tetiklenmeyi önlemek için
+silence_detection_threshold = 1
+
+# Adaptive VAD and Echo Cancellation Settings
+use_adaptive_vad = true
+auto_calibration = true
+webrtc_aggressiveness = 3  # Gürültü ortamı için daha agresif WebRTC VAD
+calibration_window_ms = 3000  # Daha hızlı kalibrasyon için 3 saniye
+
 # Debug mode
 debug = true
 
 [general]
-# Optional, if Config class needs it
-loglevel = INFO
+# Daha detaylı loglar için DEBUG seviyesine çıkarıldı
+loglevel = DEBUG
