Add next steps plan and Ollama performance optimization guide
- Created `next_steps_plan.md` to outline the completed phases, current status, technical and business targets, and critical path for the OpenSIPS AI Voice Connector project.
- Introduced `ollama_optimize.md` to provide immediate optimizations for the Ollama LLM, including model selection, configuration settings, and implementation priorities.
- Updated `requirements.txt` to include new dependencies for testing and logging.
- Added multiple test scripts for various components, including detailed Ollama tests, end-to-end scenarios, and pipeline integration tests.
- Implemented utility functions and pipeline management classes to enhance the overall architecture and maintainability of the project.

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,10 @@ torchaudio==2.7.0
 silero-vad==5.1.2
 g711==1.6.5
 wyoming==1.6.0
+pytest==8.2.1
+pytest-asyncio==0.23.6
+structlog==24.1.0
+loguru==0.7.2
+pyloudnorm==0.1.1
+soxr==0.3.7
+aiohttp==3.9.1
