--- a/cfg/opensips-ai-voice-connector.ini
+++ b/cfg/opensips-ai-voice-connector.ini
@@ -2,6 +2,7 @@
 # Use the Docker Compose service name instead of the Kubernetes DNS name
 ip = 172.20.0.4
 port = 8088
+host = localhost
 
 [engine]
 # Bind on all interfaces for event subscriptions
@@ -17,9 +18,8 @@ bind_ip = 0.0.0.0
 ip = 192.168.1.122
 #RTP kaynak adresi
 
-
 [vosk]
-url = ws://vosk-server:2700
+url = ws://localhost:2700
 channels = 1
 send_eof = true
 host = piper-tts-server
@@ -38,7 +38,23 @@ loglevel = INFO
 
 [ai]
 type = vosk
+flavor = pipecat
+model = default
 
 [azure]
 # Present in previous version and implied disabled at bottom of image
 disabled = true
+
+[audio]
+sample_rate = 16000
+chunk_size = 160
+
+[pipeline]
+vad_threshold = 0.5
+stt_timeout = 5.0
+llm_timeout = 10.0
+tts_timeout = 5.0
+
+[logging]
+level = INFO
+format = structured
