Enhance OpenSIPS AI Voice Connector with LLaMA integration and Docker improvements
- Added a new LLaMA server service to docker-compose.yml for custom LLaMA LLM integration.
- Updated Dockerfile to use Python 3.11 and included local Pipecat installation.
- Enhanced requirements.txt with additional dependencies for testing and logging.
- Created start_docker.ps1 and start_docker.sh scripts for easier service startup on Windows and Linux.
- Implemented a comprehensive LLaMA WebSocket integration test in test_llama_integration.py.
- Refactored main.py to support the new service architecture and improved logging.
- Updated configuration files to reflect new service endpoints and settings.

--- a/cfg/opensips-ai-voice-connector.ini
+++ b/cfg/opensips-ai-voice-connector.ini
@@ -1,31 +1,44 @@
 [opensips]
-# Use the Docker Compose service name instead of the Kubernetes DNS name
-ip = 172.20.0.4
+# Docker Compose service name
+ip = opensips
 port = 8088
-host = localhost
+host = opensips
 
 [engine]
 # Bind on all interfaces for event subscriptions
 event_ip = 0.0.0.0
-# Corrected based on image
 event_port = 8089
+
+[sip]
+# SIP configuration for Docker
+host = 0.0.0.0
+port = 8088
 
 [rtp]
 min_port = 35000
 max_port = 35003
 bind_ip = 0.0.0.0
-# Ana makinenin IP adresi (MicroSIP aynı makinede olduğu için)
-ip = 192.168.1.122
-#RTP kaynak adresi
+# Docker container IP (will be assigned by Docker)
+ip = 0.0.0.0
 
-[vosk]
-url = ws://localhost:2700
+# AI Services Configuration
+[llm]
+url = http://llama-server:8765/generate
+model = custom-llama
+timeout = 4.0
+stream = true
+
+[stt]
+url = ws://vosk-server:2700
 channels = 1
 send_eof = true
+
+[tts]
+url = ws://piper-tts-server:8000/tts
 host = piper-tts-server
 port = 8000
-match = ^vosk.*$ 
 
+# Deprecated services (disabled)
 [deepgram]
 disabled = true
 
