Enhance OpenSIPS AI Voice Connector with interruption management and service improvements
- Updated docker-compose.yml to reflect new service configurations and added support for GPU resources.
- Introduced monitoring and startup scripts for easier service management.
- Implemented interruption strategies in the pipeline for improved user interaction during voice calls.
- Enhanced LLaMA WebSocket service with streaming sentence segmentation for optimized TTS processing.
- Updated configuration files to support new service endpoints and parameters.
- Added comprehensive tests for interruption management and sentence segmentation functionality.

--- a/cfg/opensips-ai-voice-connector.ini
+++ b/cfg/opensips-ai-voice-connector.ini
@@ -23,20 +23,27 @@ ip = 0.0.0.0
 
 # AI Services Configuration
 [llm]
-url = http://llama-server:8765/generate
-model = custom-llama
+url = ws://llm-turkish-server:8765
+model = llama3.2:3b-instruct-turkish
 timeout = 4.0
 stream = true
+temperature = 0.2
+top_p = 0.7
+max_tokens = 80
 
 [stt]
 url = ws://vosk-server:2700
 channels = 1
 send_eof = true
+sample_rate = 16000
+model = vosk-model-tr
 
 [tts]
 url = ws://piper-tts-server:8000/tts
 host = piper-tts-server
 port = 8000
+voice = tr_TR-dfki-medium
+sample_rate = 22050
 
 # Deprecated services (disabled)
 [deepgram]
@@ -61,13 +68,23 @@ disabled = true
 [audio]
 sample_rate = 16000
 chunk_size = 160
+format = pcm16
 
 [pipeline]
 vad_threshold = 0.5
 stt_timeout = 5.0
 llm_timeout = 10.0
 tts_timeout = 5.0
+enable_interruption = true
+interruption_min_words = 2
+interruption_volume_threshold = 0.6
 
 [logging]
 level = INFO
 format = structured
+
+[interruption]
+enabled = true
+min_words_strategy = 2
+volume_threshold = 0.6
+volume_duration_ms = 300
