--- a/cfg/opensips.cfg
+++ b/cfg/opensips.cfg
@@ -22,6 +22,8 @@ loadmodule "mi_fifo.so"
 loadmodule "proto_tcp.so"
 loadmodule "proto_udp.so"
 loadmodule "sl.so"
+loadmodule "dialog.so"
+loadmodule "maxfwd.so"
 
 loadmodule "event_datagram.so"
 loadmodule "mi_datagram.so"
@@ -34,24 +36,91 @@ modparam("tm", "fr_inv_timeout", 3)
 modparam("tm", "restart_fr_on_each_reply", 0)
 modparam("tm", "onreply_avp_mode", 1)
 
+# Dialog module
+modparam("dialog", "dlg_match_mode", 1)
+modparam("dialog", "default_timeout", 21600)
+
 # MI Datagram - OpenSIPS'in OAVC'den MI komutlarını dinlediği yer
 # 127.0.0.1 yerine 0.0.0.0 kullanın ki diğer konteynerler erişebilsin
 modparam("mi_datagram", "socket_name", "udp:0.0.0.0:8088")
+
+# B2B Entities - OAVC bağlantısı için
+modparam("b2b_entities", "server_address", "sip:opensips:5060")
 
 ####### Routing Logic ########
 
 # Main request routing
 route {
+    # Max forwards check
+    if (!mf_process_maxfwd_header(10)) {
+        send_reply(483, "Too Many Hops");
+        exit;
+    }
 
+    # Record routing for in-dialog requests
+    if (has_totag()) {
+        if (loose_route()) {
+            if (is_method("INVITE")) {
+                record_route();
+            }
+            route(relay);
+            exit;
+        }
+    }
 
-	# Initial request processing
-	# Check for unwanted requests
-	if (!is_method("INVITE") || has_totag()) {
-		send_reply(405, "Method Not Allowed");
-		exit;
-	}
-	ua_session_server_init($var(b2b_key),"rbh");
-	xlog("Started new call for $var(b2b_key)\n");
-	exit;
+    # Initial request processing
+    if (is_method("INVITE")) {
+        # Create dialog
+        create_dialog();
+        
+        # Record route
+        record_route();
+        
+        # Log incoming call
+        xlog("L_INFO", "Incoming INVITE from $fu to $ru\n");
+        
+        # Forward to OAVC (OpenSIPS AI Voice Connector)
+        # OAVC container'ının IP'si ve portu
+        $ru = "sip:" + $rU + "@opensips-ai-voice-connector:8088";
+        
+        xlog("L_INFO", "Forwarding call to OAVC: $ru\n");
+        
+        # Set destination
+        if (!t_relay()) {
+            send_reply(500, "Internal Server Error");
+            exit;
+        }
+        
+        exit;
+    }
+    
+    # Handle other methods
+    if (is_method("REGISTER|SUBSCRIBE|NOTIFY")) {
+        send_reply(200, "OK");
+        exit;
+    }
+    
+    # Default: Method not allowed
+    send_reply(405, "Method Not Allowed");
+    exit;
+}
 
+# Relay route
+route[relay] {
+    if (!t_relay()) {
+        send_reply(500, "Internal Server Error");
+    }
+    exit;
+}
+
+# Failure route
+failure_route[1] {
+    if (t_was_cancelled()) {
+        exit;
+    }
+    
+    xlog("L_INFO", "Call failed with code $T_reply_code\n");
+    
+    # You can add alternative routing here
+    t_reply(486, "Busy Here");
 }
