--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,105 +1,116 @@
 version: '3.8'
 
 services:
-  # OpenSIPS AI Voice Connector (opensips-ai-voice-connector - Sizin Python uygulamanız)
+  # OpenSIPS AI Voice Connector (OAVC - Ana uygulama)
   opensips-ai-voice-connector:
-    build: . # Dockerfile'ın bulunduğu dizin (proje kök dizini varsayıldı)
-    container_name: opensips-ai-voice-connector-oavc
+    build: .
+    container_name: opensips-ai-voice-connector
     ports:
-
-      # Gelen istekler için TCP port 8088'i host'a map'leyin
       - "8088:8088/tcp"
       - "8089:8089/tcp"
-      # RTP portlarını UDP olarak map'le
       - "35000-35003:35000-35003/udp"
-      # Not: MI (8088) ve Event (35010) portları sadece diğer konteynerlerce
-      # erişileceği için host'a maplenmesi genellikle GEREKMEZ.
-      # Ancak, isteğiniz üzerine TCP 8088'i dışarıya açıyoruz.
+      - "35010:35010/udp"
+      - "35011:35011/udp"
     volumes:
-      # Genel yapılandırma dosyasını konteynere bağla
       - ./cfg/opensips-ai-voice-connector.ini:/app/cfg/opensips-ai-voice-connector.ini
+      - ./test_audio:/app/test_audio
     environment:
-      # Vosk sunucusuna erişim için servis adını kullanın      # Ana yapılandırma dosyasının yolunu belirtin
       - CONFIG_FILE=/app/cfg/opensips-ai-voice-connector.ini
       - PYTHONPATH=/app
-
+      - VOSK_SERVER_URL=ws://vosk-server:2700
+      - PIPER_TTS_URL=ws://piper-tts-server:8000/tts
+      - LLAMA_SERVER_URL=ws://llm-turkish-server:8765
     networks:
       - opensips_network
     depends_on:
       - opensips
-      - vosk-server # opensips-ai-voice-connector başlamadan önce rtpproxy ve vosk'un hazır olmasını bekle
+      - vosk-server
       - piper-tts-server
-      - llama-server # Custom LLaMA LLM servisi
-    restart: unless-stopped # Konteyner durursa yeniden başlatmayı dene
+      - llm-turkish-server
+    restart: unless-stopped
 
-  # OpenSIPS Servisi
+  # OpenSIPS SIP Proxy
   opensips:
-    # Seçenek 1: Hazır OpenSIPS imajı kullanın (versiyonu ihtiyacınıza göre seçin)
-    image: opensips/opensips:3.4
-    # Seçenek 2: Eğer OpenSIPS için kendi Dockerfile'ınız varsa:
-    # build: ./path/to/opensips/docker/context # Gerçek yolu belirtin
+    image: opensips/opensips:3.6
     container_name: opensips
     ports:
-      # Kubernetes tanımına göre portlar
-      - "5060:5060/udp" # Standart SIP (UDP)
-      - "8080:8080/udp" # SIP Alternatif (UDP)
-      - "8088:8088/udp" # MI Datagram (UDP)
+      - "5060:5060/udp"
+      - "5060:5060/tcp"
+      - "8080:8080/udp"
     volumes:
-      # Güncellenmiş opensips.cfg dosyasını konteynere bağlayın
       - ./cfg/opensips.cfg:/etc/opensips/opensips.cfg
     networks:
       - opensips_network
-
     restart: unless-stopped
 
-  # Vosk STT Servisi
+  # Vosk STT Server
   vosk-server:
-    image: dehalokmansahin/vosk-server:latest # Örnek Vosk imajı
+    image: dehalokmansahin/vosk-server:latest
     container_name: vosk-server
     ports:
-      # Vosk WebSocket portunu host'a map'leyin
       - "2700:2700"
+    environment:
+      - MODEL_PATH=/opt/vosk-model
+      - SAMPLE_RATE=16000
     networks:
       - opensips_network
     restart: unless-stopped
 
+  # Piper TTS Server
   piper-tts-server:
     image: piper-tts-server:py311
     container_name: piper-tts-server
     ports:
       - "8000:8000"
-      - "8080:8080"
+      - "8001:8001"
+    environment:
+      - MODEL_PATH=/app/models
+      - VOICE_MODEL=tr_TR-dfki-medium
+    volumes:
+      - piper_models:/app/models
     networks:
       - opensips_network
     restart: unless-stopped
 
-  # Custom LLaMA Model Server
-  llama-server:
-    image: llama-server:latest
-    container_name: llama-model-server
+  # LLM Turkish Server (Llama3.2 Turkish Model)
+  llm-turkish-server:
+    image: dehalokmansahin/llm-turkish-server:latest
+    container_name: llm-turkish-server
     ports:
       - "8765:8765"
+    environment:
+      - MODEL_NAME=llama3.2:3b-instruct-turkish
+      - MAX_TOKENS=80
+      - TEMPERATURE=0.2
+      - TOP_P=0.7
+      - WEBSOCKET_PORT=8765
     volumes:
-      - ./model:/app/model  # Model dosyalarınızın bulunduğu dizin
+      - llm_models:/app/models
+      - llm_cache:/app/cache
     networks:
       - opensips_network
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
     restart: unless-stopped
-    environment:
-      - MODEL_DIR=/app/model
-      - PORT=8765
-    # GPU support (uncomment if you have NVIDIA GPU)
-    # deploy:
-    #   resources:
-    #     reservations:
-    #       devices:
-    #         - driver: nvidia
-    #           count: 1
-    #           capabilities: [gpu]
 
 networks:
   opensips_network:
-    driver: bridge # Konteynerlerin birbirleriyle konuşabilmesi için ağ
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.20.0.0/16
 
 volumes:
+  piper_models:
+    driver: local
+  llm_models:
+    driver: local
+  llm_cache:
+    driver: local
   model_data:
     driver: local
