Update configuration files and enhance routing logic for OpenSIPS AI Voice Connector
- Added TEST_MODE configuration to docker-compose.yml for easier testing.
- Updated opensips-ai-voice-connector.ini with local development settings for IP and port adjustments.
- Refactored opensips.cfg to streamline routing logic and improve handling of SIP requests.
- Removed unused modules and cleaned up code by deleting obsolete files related to Azure and ChatGPT integrations.
- Enhanced error handling and logging throughout the codebase for better debugging and maintenance.

--- a/cfg/opensips-ai-voice-connector.ini
+++ b/cfg/opensips-ai-voice-connector.ini
@@ -1,16 +1,19 @@
 [opensips]
-# Docker Compose service name
-ip = opensips
+# Local development configuration
+ip = 172.20.0.6
 port = 8088
-host = opensips
+host = 172.20.0.6
 
 [engine]
 # Bind on all interfaces for event subscriptions
 event_ip = 0.0.0.0
-event_port = 8089
+event_port = 8090
+# SIP listener configuration
+sip_ip = 0.0.0.0
+sip_port = 8089
 
 [sip]
-# SIP configuration for Docker
+# SIP configuration for local development
 host = 0.0.0.0
 port = 8088
 
@@ -18,10 +21,10 @@ port = 8088
 min_port = 35000
 max_port = 35003
 bind_ip = 0.0.0.0
-# Docker container IP (will be assigned by Docker)
+# Local development IP
 ip = 0.0.0.0
 
-# AI Services Configuration
+# AI Services Configuration - Docker container network
 [llm]
 url = ws://llm-turkish-server:8765
 model = llama3.2:3b-instruct-turkish
