--- a/cfg/opensips.cfg
+++ b/cfg/opensips.cfg
@@ -22,8 +22,6 @@ loadmodule "mi_fifo.so"
 loadmodule "proto_tcp.so"
 loadmodule "proto_udp.so"
 loadmodule "sl.so"
-loadmodule "dialog.so"
-loadmodule "maxfwd.so"
 
 loadmodule "event_datagram.so"
 loadmodule "mi_datagram.so"
@@ -36,91 +34,40 @@ modparam("tm", "fr_inv_timeout", 3)
 modparam("tm", "restart_fr_on_each_reply", 0)
 modparam("tm", "onreply_avp_mode", 1)
 
-# Dialog module
-modparam("dialog", "dlg_match_mode", 1)
-modparam("dialog", "default_timeout", 21600)
-
 # MI Datagram - OpenSIPS'in OAVC'den MI komutlarını dinlediği yer
 # 127.0.0.1 yerine 0.0.0.0 kullanın ki diğer konteynerler erişebilsin
 modparam("mi_datagram", "socket_name", "udp:0.0.0.0:8088")
 
-# B2B Entities - OAVC bağlantısı için
-modparam("b2b_entities", "server_address", "sip:opensips:5060")
+# B2B Entities parametreleri - OAVC'ye yönlendirme için
+# ua_server_address parametresi mevcut değil, routing logic'te handle edelim
 
 ####### Routing Logic ########
 
 # Main request routing
 route {
-    # Max forwards check
-    if (!mf_process_maxfwd_header(10)) {
-        send_reply(483, "Too Many Hops");
-        exit;
-    }
-
-    # Record routing for in-dialog requests
-    if (has_totag()) {
-        if (loose_route()) {
-            if (is_method("INVITE")) {
-                record_route();
-            }
-            route(relay);
-            exit;
-        }
-    }
-
-    # Initial request processing
-    if (is_method("INVITE")) {
-        # Create dialog
-        create_dialog();
-        
-        # Record route
-        record_route();
-        
-        # Log incoming call
-        xlog("L_INFO", "Incoming INVITE from $fu to $ru\n");
-        
-        # Forward to OAVC (OpenSIPS AI Voice Connector)
-        # OAVC container'ının IP'si ve portu
-        $ru = "sip:" + $rU + "@opensips-ai-voice-connector:8088";
-        
-        xlog("L_INFO", "Forwarding call to OAVC: $ru\n");
-        
-        # Set destination
-        if (!t_relay()) {
-            send_reply(500, "Internal Server Error");
-            exit;
-        }
-        
-        exit;
-    }
-    
-    # Handle other methods
-    if (is_method("REGISTER|SUBSCRIBE|NOTIFY")) {
-        send_reply(200, "OK");
-        exit;
-    }
-    
-    # Default: Method not allowed
-    send_reply(405, "Method Not Allowed");
-    exit;
+	
+	# Initial request processing
+	# Check for unwanted requests
+	if (!is_method("INVITE") || has_totag()) {
+		send_reply(405, "Method Not Allowed");
+		exit;
+	}
+	
+	# B2B UA session başlat ve OAVC'ye yönlendir
+	$var(b2b_key) = "call_" + $ci + "_" + $ft;
+	ua_session_server_init($var(b2b_key), "rbh");
+	xlog("L_NOTICE", "Started new B2B call for $var(b2b_key) - routing to OAVC at 172.20.0.6:8089\n");
+	
+	# Çağrıyı OAVC'ye yönlendir
+	$ru = "sip:" + $rU + "@172.20.0.6:8089";
+	
+	# Forward the call
+	t_on_reply("handle_reply");
+	t_relay();
+	exit;
 }
 
-# Relay route
-route[relay] {
-    if (!t_relay()) {
-        send_reply(500, "Internal Server Error");
-    }
-    exit;
-}
-
-# Failure route
-failure_route[1] {
-    if (t_was_cancelled()) {
-        exit;
-    }
-    
-    xlog("L_INFO", "Call failed with code $T_reply_code\n");
-    
-    # You can add alternative routing here
-    t_reply(486, "Busy Here");
+# Reply route - OAVC'den gelen yanıtları işle
+onreply_route[handle_reply] {
+	xlog("L_NOTICE", "Reply from OAVC: $rs $rr\n");
 }
